force-app/main/default/objects/FKD_Marketing__c/FKD_Marketing__c.object-meta.xml
<CustomObject>
    <label>FKD Marketing</label>
    <nameField>
        <label>FKD Marketing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FKD Marketing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>