force-app/main/default/objects/FKD_Marketing__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Operation__r.Application__c ,  Operation__r.Application__r.Name , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application</label>
    <type>Text</type>
</CustomField>