force-app/main/default/objects/FKD_Marketing__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <formula>Operation__r.Application__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application ID</label>
    <type>Text</type>
</CustomField>