force-app/main/default/objects/FKD_Marketing__c/fields/Approval_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Approval_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FKD_Marketing</relationshipName>
    <type>Lookup</type>
</CustomField>