force-app/main/default/objects/FKD_Marketing__c/fields/Approval_By__c.field-meta.xml
<CustomField>
    <fullName>Approval_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FKD_Marketing1</relationshipName>
    <type>Lookup</type>
</CustomField>