force-app/main/default/objects/FKD_Marketing__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operation</label>
    <referenceTo>Operation__c</referenceTo>
    <relationshipLabel>FKD Marketing</relationshipLabel>
    <relationshipName>FKD_Marketing</relationshipName>
    <type>Lookup</type>
</CustomField>